add translation from baidu service

--- a/NopLanCompare.csproj
+++ b/NopLanCompare.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="language_pack_source.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
